added countryLabel to solr index and consolidation, code refactoring